--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/src/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Moose Movie</title>
+    <link rel="preload" href="src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link href="src/index.css" rel="stylesheet" /></noscript>
   </head>
   <body>
     <div id="root"></div>
