--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moose Movie</title>
+    <title>MooseHD</title>
     <link rel="preload" href="src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
     <noscript><link href="src/index.css" rel="stylesheet" /></noscript>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script></script>
   </body>
 </html>
